@@ -4,7 +4,7 @@
 # Licence GPL v3
 
 .isSupportedFormat <- function(dname) {
-	res <- dname %in% c(.nativeDrivers(), 'ascii')
+	res <- dname %in% c(.nativeDrivers(), 'ascii', 'big.matrix', 'CDF')
 	if (!res) { 
 		res <- .isSupportedGDALFormat(dname) 
 	} 
